# xx9

./: .gitignore  config.example.json  config.json  crawler.py  detect_api.py  fetch_creds.py  pyproject.toml  scheduler.py  server.py
deploy/: xx9-scheduler.service  xx9-web.service
web/: app.js  index.html  style.css
