[project]
name = "xx9"
version = "0.1.0"
description = "主播视频爬虫"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pycryptodome>=3.19",
    "playwright>=1.60.0",
    "pymysql>=1.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "itsdangerous>=2.1",
]

# 不在此写死 pip 镜像（镜像是机器相关的：国内用清华、海外用默认 PyPI）。
# 国内机器加速：export UV_DEFAULT_INDEX=https://pypi.tuna.tsinghua.edu.cn/simple
# 海外机器不设、走默认 PyPI 即可。
