[project]
name = "xx9"
version = "0.1.0"
description = "主播视频爬虫"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pycryptodome>=3.19",
    "playwright>=1.60.0",
    "pymysql>=1.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "itsdangerous>=2.1",
    "apscheduler>=3.10",
]

# 国内镜像（清华），加速 uv sync / 依赖安装
# 海外机器若连不上，用 uv sync --default-index https://pypi.org/simple 覆盖
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
